# SoundMate

./: .gitignore  CMakeLists.txt  README.md
SoundComradeSearch/: CMakeLists.txt  main.cpp
SoundComradeSearch/include/: abs_cl_parser.hpp  abs_connection.hpp  abs_data_base_adapter.hpp  abs_db_parser.hpp  abs_query_processor.hpp  abs_server.hpp  category.hpp  cl_parser.hpp  client_connection.hpp  data_base_adapter.hpp  data_base_connection.hpp  data_base_query.hpp  db_parser.hpp  query_processor.hpp  request.hpp  response_from_db.hpp  search.hpp  server.hpp  strip_string.hpp
SoundComradeSearch/src/: cl_parser.cpp  client_connection.cpp  data_base_adapter.cpp  data_base_connection.cpp  data_base_query.cpp  db_parser.cpp  query_processor.cpp  request.cpp  search.cpp  server.cpp
SoundComradeSearch/tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests  tests.cpp
SoundComradeSearch/tests/include/: test_cl_parser.hpp  test_client_connection.hpp
SoundComradeSearch/tests/src/: test_cl_parser.cpp  test_client_connection.cpp  test_data_base_query.cpp  test_db_parser.cpp  test_query_processor.cpp  test_request.cpp
code_db/: DataBaseFrame.h
interface/include/: MainInterface.h  Models.h  PresentEvents.h  PresentListeners.h  Presentors.h  Utils.h  ViewObjects.h  Views.h
interface/src/: Models.cpp  PresentEvents.cpp  PresentListeners.cpp  Presentors.cpp  ViewObjects.cpp  Views.cpp  main.cpp
messenger/include/: ChatRoom.h  ChatUser.h  Database.h  Logger.h  Message.h  MultiThreadChatServer.h
mock_test/: mocktest1.cpp
mock_tests/: mocktest1.cpp
model/DB/: 1.txt  2.txt  3.txt  4.txt  person.txt
model/include/: DataBaseFrame.h  DataBaseMessanger.h  DataBasePerson.h  SearchData.h  UserActionFrame.h
model/src/: DataBaseMessanger.cpp  DataBasePerson.cpp  SearchData.cpp  UserAction.cpp  main.cpp
model_db/: CMakeLists.txt  main.cpp
model_db/DB/: 1.txt  2.txt  3.txt  4.txt  person.txt
model_db/include/: DataBaseMessanger.h  DataBasePerson.h  SearchData.h  UserActionFrame.h
model_db/src/: DataBaseMessanger.cpp  DataBasePerson.cpp  SearchData.cpp  UserAction.cpp
